fixed my windows pc having horizontal scroll bar on stylists page

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@
 
 #mainContainer {
     height: 100vh;
-    width: 100vw;
 }
   
 #randco_navbarBrand {
